@@ -26,7 +26,9 @@ import com.arcadedb.graph.Edge;
 import com.arcadedb.graph.Vertex;
 import com.arcadedb.query.sql.parser.Identifier;
 
-import java.util.*;
+import java.util.Iterator;
+import java.util.NoSuchElementException;
+import java.util.Set;
 
 /**
  * Created by luigidellaquila on 21/02/17.
@@ -98,7 +100,7 @@ public class FetchEdgesToVerticesStep extends AbstractExecutionStep {
     if (toValues instanceof Iterable iterable && !(toValues instanceof Identifiable)) {
       toValues = iterable.iterator();
     } else if (!(toValues instanceof Iterator)) {
-      toValues = Collections.singleton(toValues).iterator();
+      toValues = Set.of(toValues).iterator();
     }
 
     this.toIter = (Iterator) toValues;
