@@ -322,7 +322,7 @@ public class BaseExpression extends MathExpression {
   public List<String> getMatchPatternInvolvedAliases() {
     if (this.identifier != null && this.identifier.toString().equals("$matched")) {
       if (modifier != null && modifier.suffix != null && modifier.suffix.identifier != null) {
-        return Collections.singletonList(modifier.suffix.identifier.toString());
+        return List.of(modifier.suffix.identifier.toString());
       }
     }
     return Collections.emptyList();
